# tesseract-storage

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: .gitignore  devcontainer.json  docker-compose.override.yml  on-create.sh
util/: install-dependencies  lint  project-lint  test
